added a canvas version

--- a/tic_tac_toe/textGame.html
+++ b/tic_tac_toe/textGame.html
@@ -3,7 +3,7 @@
 <head>
     <title>Textual Tic-Tac-Toe</title>
 
-    <script data-main="config" src="lib/require.js"></script>
+    <script data-main="textConfig" src="lib/require.js"></script>
 
 </head>
 <body>
