--- a/tic_tac_toe/canvasGame.html
+++ b/tic_tac_toe/canvasGame.html
@@ -3,7 +3,7 @@
 <head>
     <title>Textual Tic-Tac-Toe</title>
 
-    <script data-main="canvasConfig" src="lib/require.js"></script>
+    <script data-main="src/canvasConfig" src="lib/require.js"></script>
 
 </head>
 <body>
