started spliting ai out into its own class

--- a/tic_tac_toe/canvasGame.html
+++ b/tic_tac_toe/canvasGame.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <title>Textual Tic-Tac-Toe</title>
+    <title>Canvas Tic-Tac-Toe Experiment</title>
 
     <script data-main="src/canvasConfig" src="lib/require.js"></script>
 
