commented out AISpec

--- a/tic_tac_toe/SpecRunner.html
+++ b/tic_tac_toe/SpecRunner.html
@@ -11,11 +11,11 @@
 
   <!-- include source files here... -->
   <script type="text/javascript" src="src/TicTac.js"></script>
-  <script type="text/javascript" src="src/AI.js"></script>
+  <!--<script type="text/javascript" src="src/AI.js"></script>-->
 
   <!-- include spec files here... -->
   <script type="text/javascript" src="spec/TicTacSpec.js"></script>
-  <script type="text/javascript" src="spec/AISpec.js"></script>
+  <!--<script type="text/javascript" src="spec/AISpec.js"></script>-->
 
   <script type="text/javascript">
     (function() {
